[package]
name = "xorfiles_avx2"
version = "0.1.0"
edition = "2021"

authors = ["qnfm <eirivihe@gmail.com>"]
description = "A Rust cli for XOR file operations using AVX2 instructions."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qnfm/xorfiles_avx2"
repository = "https://github.com/qnfm/xorfiles_avx2"
keywords = ["xor", "cryptor", "avx2", "simd", "CLI"]  # Add relevant keywords
categories = ["cryptography", "command-line-utilities", "utilities"]  # Choose appropriate categories

[dependencies]
